--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "tslib": "^2.8.1",
     "typescript": "~5.6.2",
     "vite": "^6.0.1"
+  },
+  "dependencies": {
+    "clsx": "^2.1.1"
   }
 }
