Added optional @rollup/rollup-linux-x64-gnu dependency

--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
   },
   "dependencies": {
     "clsx": "^2.1.1"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.28.1"
   }
 }
